--- a/convert_smartsolo2palm/readme
+++ b/convert_smartsolo2palm/readme
@@ -1,1 +1,4 @@
-
+Usage:convert smartsolo data to PALM format
+1.smartsolo data from Sololite.exe
+2.raw name 453037352.0001.2024.11.15.00.00.00.000.E.sac
+3.after convert data name KMS.453037359.2024.319.SHE.SAC
